--- a/index.mobile.css
+++ b/index.mobile.css
@@ -27,7 +27,7 @@
     }
     
     #experience-section {
-        overflow-y: auto;
+        overflow-y: scroll;     
     }
     
     .card {
